[package]
name = "cluster-valid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cluster_valid"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.22.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
pyo3 = { version = "0.22.4", features = ["extension-module","abi3-py37","generate-import-lib"] }
itertools = "0.13.0"
ndarray-linalg = "0.16.0"
rayon = "1.10.0"

[patch.crates-io]
ndarray-linalg = { git = "https://github.com/VladGTT/ndarray-linalg.git" }

[dev-dependencies]
assert_float_eq = "1.1.3"
